--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"guzzlehttp/guzzle": "~6.0",
-		"laravelcollective/html": "5.1.*"
+		"laravelcollective/html": "5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
